--- a/CorpoLoja/Css/style.css
+++ b/CorpoLoja/Css/style.css
@@ -3,27 +3,38 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: Helvetica
 }
 
+.navbar-container{
+    padding: 0 2rem;
+    justify-content: space-between;
+    display: flex;
+    background-color: #7292c4;
+    width: 100%;
+    height: 80px;
+}
 
-/* Logo */
-#logo{
+.icon-logo{
     display: flex;
     align-items: center;
-}
-/* navbar-container */
-.navbar-container{
-background-color: #506b99;
-width: 100%;
-height: 70px;
+    
+    
+    
 }
 
-/* items */
-.navbar-items {
+
+.navbar-items{
     display: flex;
     justify-content: center;
-    gap: 30px;
+    align-items: center;
     list-style: none;
+    gap: 20px;
 }
 
+#pesquisar{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 
+}
