--- a/CorpoLoja/Css/style.css
+++ b/CorpoLoja/Css/style.css
@@ -29,12 +29,19 @@
     justify-content: center;
     align-items: center;
     list-style: none;
-    gap: 20px;
+    gap: 20px;    
+}
+
+.navbar-items a{
+    text-decoration: none;
+    color: black;
 }
 
 #pesquisar{
+    text-decoration: none;
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    color: black;
 
 }
