--- a/CorpoLoja/Css/style.css
+++ b/CorpoLoja/Css/style.css
@@ -7,12 +7,13 @@
 }
 body{
     background-color: #eaeded;
+    
 }
 .container-pai{
     background-color: #fff;
     margin: 0 auto;
     width: 800px;
-    height: 1000px ;
+    max-height: 3000px ;
 }
 .container-pai .navbar-container{
     margin-top: 50px;
@@ -132,4 +133,23 @@ main{
 }
 #slide4:checked~.first {
     margin-left: -75%;
+}
+
+/* produtos disponives */
+#disponiveis{
+display: flex;
+margin-top: 30px;
+gap: 20px;
+width: 300;
+overflow-x: auto;
+}
+
+#disponiveis-img{
+    min-height: 100rem;
+    max-width: 100;
+}
+
+#foto-produdo{
+    width: 300px;
+    height:200px ;
 }
